Fix issue where print button tooltip appeared next to another button on mobile display

--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -36,7 +36,7 @@ button {
   opacity: 1;
 }
 
-.btn-wrapper:hover .button-tooltip {
+.print-btn:hover .button-tooltip {
   visibility: visible;
 }
 
