--- a/src/styles/media.css
+++ b/src/styles/media.css
@@ -62,6 +62,10 @@
   .corner-buttons {
     flex-direction: column;
   }
+  .button-tooltip {
+    top: 0;
+    transform: translateY(-24px);
+  }
 }
 
 @media screen and (min-width: 1600px) {
